# clique-claw

./: .c8rc.json  .gitignore  .vscodeignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  info.md  jest.config.js  package-lock.json  package.json  todo.md  tsconfig.json
.github/workflows/: ci.yml
.husky/: pre-push
docs/: PLAN.md
rust/: Cargo.toml  README.md
rust/clique-core/: Cargo.toml
rust/clique-core/fuzz/: Cargo.toml
rust/clique-core/fuzz/corpus/fuzz_sprint_parser/: seed_basic.yaml  seed_large.yaml
rust/clique-core/fuzz/corpus/fuzz_workflow_parser/: seed_flat_format.yaml  seed_new_format.yaml  seed_old_format.yaml
rust/clique-core/fuzz/fuzz_targets/: fuzz_path_validation.rs  fuzz_sprint_parser.rs  fuzz_sprint_update.rs  fuzz_workflow_parser.rs  fuzz_workflow_update.rs
rust/clique-core/src/: fuzz_tests.rs  lib.rs  sprint.rs  types.rs  validation.rs  workflow.rs
rust/clique-wasm/: Cargo.toml
rust/clique-wasm/src/: lib.rs
scripts/: build-all.ps1  build-all.sh  build-wasm.ps1  build-wasm.sh  e2e-build.bat  e2e-build.ps1  e2e-build.sh  fuzz.ps1  fuzz.sh  parity-test.js  parity-test.ts  perf-bench.ts
src/: extension.ts
src/__tests__/: releaseVerification.test.ts
src/core/: fileWatcher.ts  pathValidation.ts  pathValidationWasm.ts  sprintParser.ts  sprintParserWasm.ts  types.ts  wasmLoader.ts  workflowParser.ts  workflowParserWasm.ts
src/phases/: baseWorkflowProvider.ts
src/phases/discovery/: treeProvider.ts
src/phases/implementation/: treeProvider.ts
src/ui/: detailPanel.ts  welcomeView.ts
(+2 files in other folders)
